# pc_attitude_estimation

./: CMakeLists.txt  README.md  package.xml
action/: GetAttitude.action
config/: parameters.yaml
include/pc_attitude_estimation/: attitude_estimation.hpp
launch/launch_params/: first_search_pose.yaml
msg/: AttitudeEst.msg  AttitudeEstVec.msg  attitude_est.msg
src/: attitude_estimation.cpp  attitude_estimation_node.cpp
srv/: GetAttitudeEst.srv
